--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -29,6 +29,9 @@
         {% for id, pelajaran, nilai in data %}
             <p>{{id}}-{{pelajaran}}: {{nilai}}</p>
         {% endfor %}
+
+    {% elif user.level == 'A' %}
+        <a href="{% url 'bulk-insert' %}">BULK INSERT NOWWWW</a>
     {% else %}
 
     {% endif %}
