--- a/templates/user/dashboard/create-user.html
+++ b/templates/user/dashboard/create-user.html
@@ -6,12 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    {{object.nama}}
-
     <form method="post">
         {% csrf_token %}         
         {{ form.as_p }}
-        <input type="submit" value="Update">
+        <input type="submit" value="Create">
     </form>
 </body>
 </html>
