--- a/templates/user/dashboard/delete-user.html
+++ b/templates/user/dashboard/delete-user.html
@@ -6,12 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    {{object.nama}}
-
     <form method="post">
-        {% csrf_token %}         
-        {{ form.as_p }}
-        <input type="submit" value="Update">
+        {% csrf_token %}
+        <p>Are you sure you want to delete "{{ object }}"?</p>            
+        <input type="submit" value="Delete">
     </form>
 </body>
 </html>
