--- a/templates/rapor/preview.html
+++ b/templates/rapor/preview.html
@@ -1,13 +1,8 @@
+{% extends "base.html" %}
+
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title></title>
-    </head>
-    <body>
-        <iframe src="{{path}}" width="400px" height="300px" title="INI PDF"></iframe>
-        <h1>{{path}}</h1>
-    </body>
-</html>
+
+{% block content %}
+    <iframe src="{{path}}" width="400px" height="300px" title="INI PDF"></iframe>
+    <h1>{{path}}</h1>
+{% endblock content %}
