--- a/templates/user/dashboard/delete-user.html
+++ b/templates/user/dashboard/delete-user.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
     <form method="post">
         {% csrf_token %}
         <p>Are you sure you want to delete "{{ object }}"?</p>            
         <input type="submit" value="Delete">
     </form>
-</body>
-</html>
+{% endblock content %}
