Create Kelas CRUD using CBV

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,10 @@
         {% block content %}        
         {% endblock content %}
 
-        {% block footer %}{% endblock footer %}
+        {% block pagination %}          
+        {% endblock pagination %}
+
+        {% block footer %}
+        {% endblock footer %}
     </body>
 </html>
