--- a/templates/user/siswa/list-siswa.html
+++ b/templates/user/siswa/list-siswa.html
@@ -3,26 +3,10 @@
 {% block content %}
     {% for siswa in object_list %}
         <a href="{% url 'siswa' siswa.nisn %}">{{siswa}}&nbsp;{{siswa.kelas}}</a>&nbsp;
-        <a href="{% url 'delete-user' siswa.nisn %}">Delete</a><br>
+        <a href="{% url 'delete-user' siswa.nisn %}">Delete</a><br>  
     {% empty %}
         <h2>No Siswa Yet</h2>
-    {% endfor %}
+    {% endfor %}    
 
-    <div class="pagination">
-        <span class="step-links">
-            {% if page_obj.has_previous %}
-                <a href="?page=1">&laquo; first</a>
-                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-            {% endif %}
-
-            <span class="current">
-                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-            </span>
-
-            {% if page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}">next</a>
-                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-            {% endif %}
-        </span>
-    </div>
+    {% include "components/pagination.html" with extra_param='kelas' extra_value=request.GET.kelas %}
 {% endblock content %}
