Create Kelas Detail View

--- a/templates/kelas/detail-kelas.html
+++ b/templates/kelas/detail-kelas.html
@@ -1,11 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
-    {{object.nama}}
+    <h1>{{ kelas.nama }}</h1>
+    {% if kelas.walikelas %}
+        <a href="{% url 'guru' kelas.walikelas.nip %}"><h2>{{ kelas.walikelas }}</h2></a>
+    {% endif %}   
+    <p>Jumlah Siswa: {{ count_siswa }}</p>     
+    </p><a href="{% url 'list-siswa' %}?kelas={{kelas}}">List Siswa</a></p>    
+    <p>List Mata Pelajaran:<br>
+    {% for matapelajaran in list_matapelajaran %}
+        <small>{{matapelajaran}}</small><br>
+    {% endfor %}
+    </p>
 
-    <form method="post">
-        {% csrf_token %}         
-        {{ form.as_p }}
-        <input type="submit" value="Save">
-    </form>
+    <br><a href="{% url 'edit-kelas' kelas.nama %}">Edit Kelas</a>
+    <br><a href="{% url 'delete-kelas' kelas.nama %}">Delete Kelas</a>
 {% endblock content %}
