--- a/templates/user/siswa/list-siswa.html
+++ b/templates/user/siswa/list-siswa.html
@@ -2,7 +2,10 @@
 
 {% block content %}
     {% for siswa in object_list %}
-        <a href="{% url 'siswa' siswa.nisn %}">{{siswa}}&nbsp;{{siswa.kelas}}</a>&nbsp;
+        <a href="{% url 'siswa' siswa.nisn %}">{{siswa}}&nbsp;</a>
+        {% if not siswa.kelas == None %}
+            <a href="{% url 'detail-kelas' siswa.kelas.nama %}">{{siswa.kelas}}</a>&nbsp;        
+        {% endif %}
         <a href="{% url 'delete-user' siswa.nisn %}">Delete</a><br>  
     {% empty %}
         <h2>No Siswa Yet</h2>
