Create Guru Detail View. Create Helpers Package

--- a/templates/kelas/detail-kelas.html
+++ b/templates/kelas/detail-kelas.html
@@ -3,10 +3,10 @@
 {% block content %}
     <h1>{{ kelas.nama }}</h1>
     {% if kelas.walikelas %}
-        <a href="{% url 'guru' kelas.walikelas.nip %}"><h2>{{ kelas.walikelas }}</h2></a>
+        <a href="{% url 'detail-guru' kelas.walikelas.nip %}"><h2>{{ kelas.walikelas }}</h2></a>
     {% endif %}   
     <p>Jumlah Siswa: {{ count_siswa }}</p>     
-    </p><a href="{% url 'list-siswa' %}?kelas={{kelas}}">List Siswa</a></p>    
+    <p><a href="{% url 'list-siswa' %}?kelas={{kelas}}">List Siswa</a></p>    
     <p>List Mata Pelajaran:<br>
     {% for matapelajaran in list_matapelajaran %}
         <small>{{matapelajaran}}</small><br>
