--- a/templates/user/guru/detail-guru.html
+++ b/templates/user/guru/detail-guru.html
@@ -2,6 +2,10 @@
 
 {% block content %}
     <h1>{{guru.nama}}</h1>
+    <small>
+        <a href="{% url 'edit-guru' guru.nip %}">Edit</a>
+        <a href="{% url 'delete-user' guru.nip %}">Delete</a>
+    </small>
     <h2>Walikelas: <a href="{% url 'detail-kelas' kelas.nama %}">{{ kelas }}</a></h2>
 
     <p>Jumlah Siswa Yang Di Walikan: {{count_siswa}}</p>
@@ -25,5 +29,9 @@
             </h5>
         {% endfor %}
     </p>
+
+    {% if not unfinished_siswa %}
+        <a href="{% url 'bundle-export' kelas.nama %}">Download Bundle PDF</a>
+    {% endif %}
 
 {% endblock content %}
