Fix broken redirect link when creating Siswa or Guru

--- a/templates/user/guru/detail-guru.html
+++ b/templates/user/guru/detail-guru.html
@@ -6,11 +6,12 @@
         <a href="{% url 'edit-guru' guru.nip %}">Edit</a>
         <a href="{% url 'delete-user' guru.nip %}">Delete</a>
     </small>
-    <h2>Walikelas: <a href="{% url 'detail-kelas' kelas.nama %}">{{ kelas }}</a></h2>
 
-    <p>Jumlah Siswa Yang Di Walikan: {{count_siswa}}</p>
+    {% if kelas %}
+        <h2>Walikelas: <a href="{% url 'detail-kelas' kelas.nama %}">{{ kelas }}</a></h2>
+        <p>Jumlah Siswa Yang Di Walikan: {{count_siswa}}</p>
 
-    <p>Siswa Yang Sudah Lengkap Nilainya: 
+        <p>Siswa Yang Sudah Lengkap Nilainya: 
         {% for siswa in finished_siswa %}
             <h4><a href="{% url 'detail-siswa' siswa.nisn %}">{{siswa.nama}}</a></h4>
             <h5>
@@ -19,19 +20,19 @@
                 <a href="{% url 'export-pdf' siswa.nisn %}?action=preview">Preview PDF</a> 
             </h5>
         {% endfor %}
-    </p>
+        </p>
 
-    <p>Siswa Yang Belum Lengkap Nilainya:
-        {% for siswa in unfinished_siswa %}
-            <h4><a href="{% url 'detail-siswa' siswa.nisn %}">{{siswa.nama}}</a></h4>
-            <h5>
-                <a href="{% url 'list_nilai' siswa.nisn %}">INSERT NILAI</a>
-            </h5>
-        {% endfor %}
-    </p>
+        <p>Siswa Yang Belum Lengkap Nilainya:
+            {% for siswa in unfinished_siswa %}
+                <h4><a href="{% url 'detail-siswa' siswa.nisn %}">{{siswa.nama}}</a></h4>
+                <h5>
+                    <a href="{% url 'list_nilai' siswa.nisn %}">INSERT NILAI</a>
+                </h5>
+            {% endfor %}
+        </p>
 
-    {% if not unfinished_siswa %}
-        <a href="{% url 'bundle-export' kelas.nama %}">Download Bundle PDF</a>
+        {% if finished_siswa and not unfinished_siswa %}
+            <a href="{% url 'bundle-export' kelas.nama %}">Download Bundle PDF</a>
+        {% endif %}
     {% endif %}
-
 {% endblock content %}
