Fix Helpers function

--- a/templates/user/guru/detail-guru.html
+++ b/templates/user/guru/detail-guru.html
@@ -13,20 +13,20 @@
 
         <p>Siswa Yang Sudah Lengkap Nilainya: 
         {% for siswa in finished_siswa %}
-            <h4><a href="{% url 'detail-siswa' siswa.nisn %}">{{siswa.nama}}</a></h4>
             <h5>
-                <a href="{% url 'list-nilai' siswa.nisn %}">INSERT NILAI</a>                
+                <a href="{% url 'detail-siswa' siswa.nisn %}">{{siswa.nama}}</a>
+                <a href="{% url 'list-nilai' siswa.nisn %}">Insert Nilai</a>                
                 <a href="{% url 'export-pdf' siswa.nisn %}?action=download">Export PDF</a>
-                <a href="{% url 'export-pdf' siswa.nisn %}?action=preview">Preview PDF</a> 
+                <a href="{% url 'export-pdf' siswa.nisn %}?action=preview">Preview PDF</a>             
             </h5>
         {% endfor %}
         </p>
 
         <p>Siswa Yang Belum Lengkap Nilainya:
             {% for siswa in unfinished_siswa %}
-                <h4><a href="{% url 'detail-siswa' siswa.nisn %}">{{siswa.nama}}</a></h4>
                 <h5>
-                    <a href="{% url 'list-nilai' siswa.nisn %}">INSERT NILAI</a>
+                    <a href="{% url 'detail-siswa' siswa.nisn %}">{{siswa.nama}}</a>
+                    <a href="{% url 'list-nilai' siswa.nisn %}">Insert Nilai</a>
                 </h5>
             {% endfor %}
         </p>
