--- a/templates/user/siswa/list-siswa.html
+++ b/templates/user/siswa/list-siswa.html
@@ -5,8 +5,7 @@
         <a href="{% url 'detail-siswa' siswa.nisn %}">{{siswa}}&nbsp;</a>
         {% if not siswa.kelas == None %}
             <a href="{% url 'detail-kelas' siswa.kelas.nama %}">{{siswa.kelas}}</a>&nbsp;        
-        {% endif %}
-        <a href="{% url 'delete-user' siswa.nisn %}">Delete</a><br>  
+        {% endif %}<br>
     {% empty %}
         <h2>No Siswa Yet</h2>
     {% endfor %}    
