Implement search feature
Search feature is now available in list siswa page.
Now kelas is no longer a url parameter, rather will have its own page

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,5 +16,8 @@
 
         {% block footer %}
         {% endblock footer %}
+
+        {% block extra_script %}
+        {% endblock extra_script %}
     </body>
 </html>
