--- a/templates/user/guru/list-guru.html
+++ b/templates/user/guru/list-guru.html
@@ -4,7 +4,7 @@
     {% for guru in object_list %}
         <a href="{% url 'detail-guru' guru.nip %}">{{guru}}&nbsp;</a>
         {% if guru.kelas %}
-            <a href="{% url 'list-siswa' %}?kelas={{guru.kelas}}">{{guru.kelas}}&nbsp;</a>
+            <a href="{% url 'detail-kelas' guru.kelas %}">{{guru.kelas}}&nbsp;</a>
         {% endif %}<br>
     {% empty %}
         <h2>No Guru Yet</h2>
