--- a/templates/user/guru/detail-guru.html
+++ b/templates/user/guru/detail-guru.html
@@ -22,7 +22,7 @@
                     <a href="{% url 'detail-siswa' siswa.nisn %}">{{siswa.nama}}</a>
                     <a href="{% url 'list-nilai' siswa.nisn %}">Insert Nilai</a>                
                     <a href="{% url 'export-pdf' siswa.nisn %}?action=download">Export PDF</a>
-                    <a href="{% url 'export-pdf' siswa.nisn %}?action=preview">Preview PDF</a>             
+                    <a target=_blank href="{% url 'export-pdf' siswa.nisn %}?action=preview">Preview PDF</a>             
                 </h5>
             {% endfor %}
             </p>
