This project is now a PWA
First and basic configuration of PWA using django-pwa.
Expected custom service worker and other cosmetics configuration
to be updated

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,8 @@
+{% load pwa %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        {% progressive_web_app_meta %}
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Rapor Manajemen</title>
@@ -29,6 +31,6 @@
                 anda adalah seorang siswa
             {% endif %}
         {% endif %}
-        
+
     </body>
 </html>
