Implement search feature
Search feature is now available in list Guru page.
It will search Name, NIP, and Kelas.

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,8 @@
         <title>Rapor Manajemen</title>
     </head>
     <body>
-        {% block navbar %}{% endblock navbar %}
+        {% block navbar %}
+        {% endblock navbar %}
 
         {% block content %}        
         {% endblock content %}
@@ -21,16 +22,5 @@
 
         {% block extra_script %}
         {% endblock extra_script %}
-
-        {% if user.is_authenticated %}
-            {% if user.akun_guru %}
-                haloluya {{user.akun_guru.nama}},<br>
-                anda adalah seorang guru
-            {% elif user.akun_siswa %}
-                haloluya {{user.akun_siswa.nama}},<br>
-                anda adalah seorang siswa
-            {% endif %}
-        {% endif %}
-
     </body>
 </html>
