--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,9 @@
 
         {% block content %}        
         {% endblock content %}
+        <br>{% if user.is_authenticated %}
+            <a href="{% url 'logout' %}">Logout</a>
+        {% endif %}
 
         {% block pagination %}          
         {% endblock pagination %}
