--- a/templates/user/guru/delete-guru.html
+++ b/templates/user/guru/delete-guru.html
@@ -3,9 +3,7 @@
 {% block content %}
     <form method="post">
         {% csrf_token %}
-                 
-        {{ user_form.as_p }}
-        {{ guru_form.as_p }}
-        <input type="submit" value="Create">
+        <p>Are you sure you want to delete "{{ object }}"?</p>            
+        <input type="submit" value="Delete">
     </form>
 {% endblock content %}
