--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,10 +1,16 @@
 {% block navbar %}
-    <nav class="navbar">
+    <nav class="navbar" id="navbar">
         <ul class="navbar-nav">
             <li class="logo">
                 <a href="{% url 'list-siswa' %}?search={{kelas}}" class="nav-link">
                     <ion-icon name="newspaper"></ion-icon>
-                    <span class="link-text">Judul App Apa?</span>
+                    <span class="link-text" id="logo-text">Rapor Asoy</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="{% url 'list-siswa' %}?search={{kelas}}" class="nav-link">
+                    <ion-icon name="settings-outline"></ion-icon>
+                    <span class="link-text">Edit Profil</span>
                 </a>
             </li>
             <li class="nav-item">
@@ -17,6 +23,12 @@
                 <a href="{% url 'list-siswa' %}?search={{kelas}}" class="nav-link">
                     <ion-icon name="people-outline"></ion-icon>
                     <span class="link-text">Status Kelas</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="{% url 'list-siswa' %}?search={{kelas}}" class="nav-link">
+                    <ion-icon name="code-slash-outline"></ion-icon>
+                    <span class="link-text">About Dev</span>
                 </a>
             </li>
             <li class="nav-item">
