Finished Guru dashboard backend

--- a/templates/dashboard/guru/kelas-not-found.html
+++ b/templates/dashboard/guru/kelas-not-found.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    {% include 'components/navbar.html' %}
+    <main id="main">
+        Anda belum terdaftar menjadi walikelas kelas manapun
+    </main>
 {% endblock content %}
