--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -2,25 +2,25 @@
     <nav class="navbar" id="navbar">
         <ul class="navbar-nav">
             <li class="logo">
-                <a href="{% url 'list-siswa' %}?search={{kelas}}" class="nav-link">
+                <a href="{% url 'dashboard' %}" class="nav-link">
                     <ion-icon name="newspaper"></ion-icon>
                     <span class="link-text" id="logo-text">Rapor Asoy</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="{% url 'list-siswa' %}?search={{kelas}}" class="nav-link">
+                <a href="{% url 'dg-edit-profil' %}" class="nav-link">
                     <ion-icon name="settings-outline"></ion-icon>
                     <span class="link-text">Edit Profil</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="{% url 'list-siswa' %}?search={{kelas}}" class="nav-link">
+                <a href="{% url 'dg-list-siswa' %}" class="nav-link">
                     <ion-icon name="list-outline"></ion-icon>
                     <span class="link-text">List Siswa</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="{% url 'list-siswa' %}?search={{kelas}}" class="nav-link">
+                <a href="{% url 'dg-status-kelas' %}" class="nav-link">
                     <ion-icon name="people-outline"></ion-icon>
                     <span class="link-text">Status Kelas</span>
                 </a>
