--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,26 +1,34 @@
 {% extends 'base.html' %}
+{% load static %}
+{% load widget_tweaks %}
+
+{% block stylesheet %}
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
+{% endblock stylesheet %}
 
 {% block content %}
     <div class="container mt-5">
         <div class="mx-auto p-5" style="width: 400px;">
             <center>
-                <h2 class="fw-bolder mb-5">Login</h2>
+                <h2 class="fw-bolder mb-5">Rapor Momen</h2>
             </center>
             <form method="post">
                 {% csrf_token %}
                 <center>
-                    <div class="mb-3">
-                        <label for="{{ form.username.id_for_label }}">Nomor Induk</label><br>
-                        {{form.username}}
+                    <div class="field">
+                        {% render_field form.username|add_class:"input" placeholder=" "%}
+                        <label class="label" for="username">Nomor Induk</label><br>                        
                     </div>
 
-                    <div class="mb-3">
-                        <label for="{{ form.password.id_for_label }}">Password</label><br>
-                        {{form.password}}
+                    <div class="field">
+                        {% render_field form.password|add_class:"input" placeholder=" "%}
+                        <label class="label" for="password">Password</label><br>                        
                     </div>
                     
                     <small>{{form.non_field_errors.as_text}}</small><br>
-                    <input class="btn button" type="submit" value="Login">
+                    <div class="outer">
+                        <input class="btn button" type="submit" value="Login">
+                    </div>
                 </center>
                 
             </form>
