--- a/static/css/main.css
+++ b/static/css/main.css
@@ -15,14 +15,111 @@ body{
     padding: 0;
 }
 
-body::-webkit-scrollbar{
+body::-webkit-scrollbar, ::-webkit-scrollbar{
     width: 0.25rem;
 }
 
-body::-webkit-scrollbar-track{
+body::-webkit-scrollbar-track, ::-webkit-scrollbar-track {
     background: #1e1e24;
 }
 
-body::-webkit-scrollbar-thumb{
+body::-webkit-scrollbar-thumb, ::-webkit-scrollbar-thumb{
     background: var(--theme-color);
+}
+
+.tbl-content{
+    height:70vh;
+    overflow-x:auto;
+    margin-top: 0px;
+}
+
+.icon-tuntas{
+    color: green;
+}
+
+.icon-nontuntas{
+    color: red;
+}
+
+.icon-male{
+    color: blue;
+}
+
+.icon-female{
+    color: rgb(235, 147, 162);
+}
+
+/* Searchbar */
+
+.searchbar{
+    width: 200px;
+}
+
+.field{
+    width: 100%;
+    position: relative;
+    border-bottom: 1px solid var(--theme-color);
+    margin: 4rem auto 1rem;
+}
+
+.label{
+    color: var(--text-color);
+    font-size: 1.2rem;
+}
+
+label{
+    display: block;
+}
+
+.input{
+    outline: none;
+    border: none;
+    overflow: hidden;
+    margin: 0;
+    width: 100%;
+    padding: 0.25rem 0;
+    background: none;
+    color: var(--theme-color);
+    font-size: 1rem;
+}
+
+.field::after{
+    content: "";
+    position: relative;
+    display: block;
+    height: 4px;
+    width: 100%;
+    background: var(--bg-secondary);
+    transform: scaleX(0);
+    transform-origin: 0%;
+    transition: transform 500ms ease;
+    top: 2px;
+}
+
+.field:focus-within{
+    border-color: transparent;
+}
+
+.field:focus-within::after{
+    transform: scaleX(1);
+}
+
+.label{
+    z-index: -1;
+    position: absolute;
+    transform: translateY(-2rem);
+    transform-origin: 0%;
+    transition: transform 400ms;
+}
+
+.field:focus-within .label{
+    transform: scale(0.8) translateY(-5rem);
+}
+
+.input:not(:placeholder-shown) + .label{
+    transform: scale(0.8) translateY(-5rem);
+}
+
+.input:-webkit-autofill + .label{
+    transform: scale(0.8) translateY(-5rem);
 }
