--- a/templates/dashboard/guru/list-siswa.html
+++ b/templates/dashboard/guru/list-siswa.html
@@ -3,24 +3,47 @@
 {% block content %}
     {% include 'components/navbar.html' %}
     <main id="main">
-        <form method="get">
-            <input type="text" id="search" name="search" placeholder="Search Name or NISN">
-        </form>
-        <div id="list">
-            {% for siswa, status in siswa_status %}
-                <a href="{% url 'detail-siswa' siswa.nisn %}">{{siswa}}&nbsp;</a>
-                <a href="{% url 'detail-kelas' siswa.kelas.nama %}">{{siswa.kelas}}</a>&nbsp;
-                {% if status %}
-                    Nilai Sudah Tuntas
-                {% else %}
-                    Nilai Belum Tuntas
-                {% endif %}
-                <br>
-            {% empty %}
-                <h2>No Siswa Yet</h2>
-            {% endfor %}    
-
-            {% include "components/pagination.html" with extra_param='search' extra_value=request.GET.search %}
+        <center><h1>List Siswa Yang Anda Walikan</h1></center>
+        <div class="searchbar ms-auto">
+            <form method="get">
+                <div class="field">
+                    <input class="input" type="text" id="search" name="search" placeholder=" ">
+                    <label for="search" class="label"><ion-icon name="search-sharp"></ion-icon>Search Disini</label>
+                </div>
+            </form>
         </div>
+        <div class="tbl-content">
+            <table class="table">
+                <thead class="table-dark tbl-head">
+                    <tr>
+                        <th>Nama</th>
+                        <th>NIS</th>
+                        <th>NISN</th>
+                        <th>Gender</th>
+                        <th>Nilai</th>
+                    </tr>
+                </thead>
+                <tbody class="table table-striped">
+                    {% for siswa, status in siswa_status %}
+                    <tr>
+                        <td>{{siswa}}</td>
+                        <td>{{siswa.nis}}</td>
+                        <td>{{siswa.nisn}}</td>
+                        {% if siswa.gender == 'P' %}
+                            <td><ion-icon name="male" class="icon-male"></ion-icon></td>
+                        {% elif siswa.gender == 'W' %}
+                            <td><ion-icon name="female" class="icon-female"></ion-icon></td>
+                        {% endif %}
+
+                        {% if status %}
+                            <td><ion-icon name="checkmark-circle-sharp" class="icon-tuntas"></ion-icon></td>
+                        {% else %}
+                            <td><ion-icon name="close-circle-sharp" class="icon-nontuntas"></ion-icon></td>
+                        {% endif %}
+                    </tr>
+                    {% endfor %}
+                </thead>
+            </table>
+        </div>        
     </main>
 {% endblock content %}
